--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "graphql-tag": "^2.12.6",
     "next": "14.1.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "use-debounce": "^10.0.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
