--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@apollo/client": "^3.9.6",
+    "@apollo/client": "3.9.0-rc.1",
     "@apollo/datasource-rest": "^6.2.2",
+    "@apollo/experimental-nextjs-app-support": "^0.8.0",
     "@apollo/server": "^4.10.1",
     "@as-integrations/next": "^3.0.0",
+    "@vercel/postgres": "^0.7.2",
     "dayjs": "^1.11.10",
+    "drizzle-orm": "^0.30.1",
     "graphql": "^16.8.1",
     "graphql-tag": "^2.12.6",
     "next": "14.1.3",
