--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "drizzle-orm": "^0.30.1",
     "graphql": "^16.8.1",
     "graphql-tag": "^2.12.6",
+    "isomorphic-dompurify": "^2.4.0",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
